--- a/ui/MainWindow.ui
+++ b/ui/MainWindow.ui
@@ -6,82 +6,55 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>800</width>
+    <width>988</width>
     <height>600</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>SimpleView</string>
-  </property>
-  <property name="windowIcon">
-   <iconset resource="Icons/icons.qrc">
-    <normaloff>:/Icons/help.png</normaloff>:/Icons/help.png</iconset>
-  </property>
-  <property name="iconSize">
-   <size>
-    <width>22</width>
-    <height>22</height>
-   </size>
+   <string>Sea Core Explorer</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <widget class="QVTKWidget" name="qvtkWidget">
+   <widget class="QVTKWidget" name="qvtkWidget" native="true">
     <property name="geometry">
      <rect>
       <x>10</x>
       <y>20</y>
-      <width>780</width>
-      <height>580</height>
+      <width>511</width>
+      <height>561</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QTableView" name="tableView">
+    <property name="geometry">
+     <rect>
+      <x>530</x>
+      <y>21</y>
+      <width>441</width>
+      <height>561</height>
      </rect>
     </property>
    </widget>
   </widget>
-  <action name="actionOpenFile">
-   <property name="enabled">
-    <bool>true</bool>
+  <widget class="QMenuBar" name="menuBar">
+   <property name="geometry">
+    <rect>
+     <x>0</x>
+     <y>0</y>
+     <width>988</width>
+     <height>22</height>
+    </rect>
    </property>
-   <property name="icon">
-    <iconset resource="Icons/icons.qrc">
-     <normaloff>:/Icons/fileopen.png</normaloff>:/Icons/fileopen.png</iconset>
-   </property>
+   <widget class="QMenu" name="menuFile">
+    <property name="title">
+     <string>File</string>
+    </property>
+    <addaction name="actionOpen"/>
+   </widget>
+   <addaction name="menuFile"/>
+  </widget>
+  <action name="actionOpen">
    <property name="text">
-    <string>Open File...</string>
-   </property>
-  </action>
-  <action name="actionExit">
-   <property name="icon">
-    <iconset>
-     <normaloff/>
-    </iconset>
-   </property>
-   <property name="text">
-    <string>Exit</string>
-   </property>
-  </action>
-  <action name="actionPrint">
-   <property name="icon">
-    <iconset resource="Icons/icons.qrc">
-     <normaloff>:/Icons/print.png</normaloff>:/Icons/print.png</iconset>
-   </property>
-   <property name="text">
-    <string>Print</string>
-   </property>
-  </action>
-  <action name="actionHelp">
-   <property name="icon">
-    <iconset resource="Icons/icons.qrc">
-     <normaloff>:/Icons/help.png</normaloff>:/Icons/help.png</iconset>
-   </property>
-   <property name="text">
-    <string>Help</string>
-   </property>
-  </action>
-  <action name="actionSave">
-   <property name="icon">
-    <iconset resource="Icons/icons.qrc">
-     <normaloff>:/Icons/filesave.png</normaloff>:/Icons/filesave.png</iconset>
-   </property>
-   <property name="text">
-    <string>Save</string>
+    <string>Open</string>
    </property>
   </action>
  </widget>
@@ -92,8 +65,6 @@
    <header>QVTKWidget.h</header>
   </customwidget>
  </customwidgets>
- <resources>
-  <include location="Icons/icons.qrc"/>
- </resources>
+ <resources/>
  <connections/>
 </ui>
